# windows

./: build.rs
src/: Cargo.toml  main.rs
src/assets/: app.manifest
src/net/: auth.rs  client.rs  download.rs  jobs.rs  mod.rs  updater.rs  upload.rs
src/ui/: controls.rs  dialogs.rs  messages.rs  mod.rs  window.rs
src/worker/: config.rs  engine.rs
