[package]
name = "minerva-worker"
version = "1.0.0"
edition = "2021"
description = "Minerva DPN Worker - Windows native client"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "native-tls", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
dirs = "6"
open = "5"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
futures-util = "0.3"
rand = "0.8"
async-channel = "2"
tokio-util = { version = "0.7", features = ["io"] }
url = "2"

[build-dependencies]
winres = "0.1"
